[package]
name = "outer_cgi"
version = "0.2.4"
authors = ["Solra Bizna <solra@bizna.name>"]
description = "A barebones CGI/FCGI wrapper."
license = "Zlib"
repository = "https://github.com/SolraBizna/outer_cgi"
edition = "2018"

[dependencies]
ctrlc = "3.4"
crossbeam-channel = "0.5"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = "0.26"
